Fixes alignments

--- a/src/app/(authenticated)/(onboarded)/contests/[slug]/(games)/@tambola/host/components/game-state.module.scss
+++ b/src/app/(authenticated)/(onboarded)/contests/[slug]/(games)/@tambola/host/components/game-state.module.scss
@@ -5,7 +5,7 @@
 .gridItems {
   width: 100%;
   margin: 0 auto;
-  margin-top: 16px;
+  margin-top: 24px;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(36px, 1fr));
   place-items: center;
